Fix: brand > 텍스트 z-index 9에서 8로 변경(8이어도 상관없기에)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -846,7 +846,7 @@ footer .footer__logo {
   overflow: hidden;
 }
 .section-brand__list {
-  z-index: 9;
+  z-index: 8;
 }
 .section-brand__list--left {
   position: absolute;
