--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -90,7 +90,7 @@
 	}
 
 	&__list {
-		z-index: 9;
+		z-index: 8;
 
 		&--left {
 			position: absolute;
